--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -2,3 +2,12 @@ li {
     list-style-type: none;
 }
 
+.inner a {
+	width: 205px;
+	height : 80px;
+}
+
+aside a {
+	width: 205px;
+	height : 80px;
+}
