anchor button size modified

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -2,7 +2,7 @@ li {
     list-style-type: none;
 }
 
-.inner a {
+/*.inner a {
 	width: 205px;
 	height : 80px;
 }
@@ -10,4 +10,4 @@ li {
 aside a {
 	width: 205px;
 	height : 80px;
-}
+}*/
