--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -47,6 +47,7 @@ li { list-style-type: none; }
 
 #hide { top:0; float:right; margin:15px 10px;}
 
+.panel-heading a {padding: 0 300px 0 0;}
 /*Media Queries*/
 @media screen and (max-width:959px){
 	#info-btn{
