--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -12,18 +12,9 @@ li { list-style-type: none; }
 
 #info-btn { position: absolute; top: 0; right: 0; margin-top: 19px; padding:15px 15px; border-radius: 5px; background-color: white; cursor: pointer; color: black; }
 
-#info-btn:hover {font-weight: bold; font-size: 14px; color: black; }
+#info-btn:hover { font-weight: bold; font-size: 14px; color: black; }
 
-#about-sitepool { 
-	height: 0;
-	overflow: auto;
-	background: #f5f5f5;
-	border-radius: 10px;
-	transition: height ease-in-out 500ms; /* css3 transition */
-    -o-transition: height ease-in-out 500ms;
-    -moz-transition: height ease-in-out 500ms;
-    -webkit-transition: height ease-in-out 500ms; /*chrome n safari*/
-}
+#about-sitepool{ background: #f5f5f5;border-radius: 10px; }
 
 #github-btn {
     height: auto;
