--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -7,7 +7,7 @@
  */
 
 html {
-  font-family: Sniglet;/*sans-serif*/; /* 1 
+  font-family: fsans-serif; /* 1 
   -webkit-text-size-adjust: 100%; /* 2 */
   -ms-text-size-adjust: 100%; /* 2 */
 }
@@ -428,7 +428,7 @@ th {
 
 /* LAYOUT STYLES */
 body {
-  font-family: 'Helvetica Neue', Helvetica, Arial, serif;
+  font-family: Sniglet;/*'Helvetica Neue', Helvetica, Arial, serif*/;
   font-size: 15px;
   font-weight: 400;
   line-height: 1.5;
@@ -450,7 +450,7 @@ a:hover {
 header {
   padding-top: 20px;
   padding-bottom: 20px;
-  font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif;
+  font-family: Sniglet/*'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif*/;
   background: #2e7bcf url(../images/header-bg.jpg) 0 0 repeat-x;
   border-bottom: solid 1px #275da1;
 }
@@ -521,7 +521,7 @@ a.button {
   height: 80px;
   padding-top: 22px;
   padding-left: 68px;
-  font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif;
+  font-family: Sniglet/*'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif*/;
   font-size: 23px;
   line-height: 1.2;
   color: #fff;
@@ -614,7 +614,7 @@ form {
 #main-content h1 {
   margin-top: 0;
   margin-bottom: 0;
-  font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif;
+  font-family: Sniglet/*'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif*/;
   font-size: 2.8em;
   font-weight: normal;
   color: #474747;
@@ -631,7 +631,7 @@ form {
 
 #main-content h2 {
   margin-bottom: 8px;
-  font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif;
+  font-family: Sniglet/*'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif*/;
   font-size: 22px;
   font-weight: bold;
   color: #474747;
@@ -647,7 +647,7 @@ form {
 #main-content h3 {
   margin-top: 24px;
   margin-bottom: 8px;
-  font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif;
+  font-family: Sniglet/*'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif*/;
   font-size: 18px;
   font-weight: bold;
   color: #474747;
@@ -663,7 +663,7 @@ form {
 
 #main-content h4 {
   margin-bottom: 8px;
-  font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif;
+  font-family: Sniglet/*'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif*/;
   font-size: 15px;
   font-weight: bold;
   color: #474747;
@@ -672,7 +672,7 @@ form {
 
 #main-content h5 {
   margin-bottom: 8px;
-  font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif;
+  font-family: Sniglet/*'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif*/;
   font-size: 14px;
   color: #474747;
   text-indent: 3px;
